--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 
 {
-  "name": "jamesjinnz/dashcols-craft",
+  "name": "jamesjinnz/dashCols",
     "license": "MIT",
     "description": "craftcms plugin for dashcol",
     "type": "craft-plugin",
